--- a/GaianArchive/package.json
+++ b/GaianArchive/package.json
@@ -2,24 +2,21 @@
   "name": "gaian-archive",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "nodemon backend/server.js",
+    "start": "node backend/server.js"
   },
   "dependencies": {
-    "next": "^14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "openai": "^4.55.0",
     "stripe": "^14.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.2",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0"
+    "nodemon": "^3.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
