--- a/GaianArchive/package.json
+++ b/GaianArchive/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "openai": "^4.55.0",
-    "stripe": "^14.0.0"
+    "stripe": "^14.0.0",
+    "typescript": "^5.6.2",
+    "@types/node": "^20.12.12"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
