--- a/GaianArchive/package.json
+++ b/GaianArchive/package.json
@@ -15,7 +15,10 @@
     "openai": "^4.55.0",
     "stripe": "^14.0.0",
     "typescript": "^5.6.2",
-    "@types/node": "^20.12.12"
+    "@types/node": "^20.12.12",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
