--- a/GaianArchive/package.json
+++ b/GaianArchive/package.json
@@ -13,11 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "openai": "^4.55.0",
-    "stripe": "^14.0.0",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "typescript": "^5.6.2",
