--- a/GaianArchive/package.json
+++ b/GaianArchive/package.json
@@ -6,22 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint || echo \"(no linter configured)\""
   },
   "dependencies": {
-    "next": "^14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "openai": "^4.55.0",
-    "stripe": "^14.0.0"
+    "next": "14.2.32",
+    "openai": "4.104.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "stripe": "14.25.0",
+    "pdf-parse": "1.1.1"
   },
   "devDependencies": {
-    "typescript": "^5.6.2",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0"
+    "typescript": "5.9.2",
+    "@types/node": "20.19.11",
+    "@types/react": "18.3.24",
+    "@types/react-dom": "18.3.7"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.17.0"
   }
 }
