--- a/GaianArchive/package.json
+++ b/GaianArchive/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint || echo \"(no linter configured)\""
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.2.32",
